--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,76 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color = "dark">
     <ion-title>
-      Tab 1
+      CALCULADORA
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+<ion-item>
+  <ion-label position="stacked">Valor 1</ion-label>
+  <ion-input></ion-input>
+</ion-item>
+
+<ion-item>
+  <ion-label position="stacked">Valor 2</ion-label>
+  <ion-input></ion-input>
+</ion-item>
+
+
+
+<ion-grid>
+  <ion-row>
+    <ion-col>
+      <ion-button color ="dark" fill="outline">
+        <ion-icon name="add-outline"></ion-icon>
+      </ion-button>
+
+    </ion-col>
+
+    <ion-col>
+      <ion-button color ="dark" fill="outline">
+        <ion-icon name="remove-outline"></ion-icon>
+      </ion-button>
+    </ion-col>
+
+    <ion-col>
+      <ion-button color ="dark" fill="outline">
+        <ion-icon name="close-outline"></ion-icon>
+      </ion-button>
+    </ion-col>
+
+    <!--não tem o simbolo de divisao-->
+    <ion-col>
+      <ion-button color ="dark" fill="outline">
+        <ion-icon name="resize-outline"></ion-icon>
+      </ion-button>
+    </ion-col>
+  </ion-row>
+
+</ion-grid>
+
+<ion-grid>
+  <ion-row>
+    <ion-col size="6">
+      <ion-button color="light" expand="full">Maior</ion-button>
+    </ion-col>
+
+    <ion-col size="6">
+      <ion-button color="light" expand="full">Menor</ion-button>
+    </ion-col>
+  </ion-row>
+</ion-grid>
+
+<ion-item>
+  <ion-label position="stacked">Resultado</ion-label>
+  <ion-input></ion-input>
+</ion-item>
+
+<ion-item>
+  <ion-label position="stacked">Operação</ion-label>
+  <ion-input></ion-input>
+</ion-item>
+
 </ion-content>
