--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,5 +1,5 @@
 <ion-header [translucent]="true">
-  <ion-toolbar color = "dark">
+  <ion-toolbar color = "calc">
     <ion-title>
       CALCULADORA
     </ion-title>
@@ -52,11 +52,11 @@
 <ion-grid>
   <ion-row>
     <ion-col size="6">
-      <ion-button color="light" expand="full">Maior</ion-button>
+      <ion-button color="cinzaclaro" expand="full">Maior</ion-button>
     </ion-col>
 
     <ion-col size="6">
-      <ion-button color="light" expand="full">Menor</ion-button>
+      <ion-button color="cinzaclaro" expand="full">Menor</ion-button>
     </ion-col>
   </ion-row>
 </ion-grid>
