--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -1,15 +1,59 @@
 ion-toolbar{
   text-align: center;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family:Arial, Helvetica, sans-serif;
   }
 
   ion-button{
     width: 100%;
     padding: 1px;
     margin: 0;
+  }
+
+  .padrao{
+    ion-toolbar {
+      text-align: left;
+      font-family:Georgia, 'Times New Roman', Times, serif;
+      padding:0px;
+    }
 
   }
 
   .numero{
-    //box-shadow: 0px 0px 5px rgb(14, 30, 36);
+    box-shadow: 0px 0px 5px rgb(49, 64, 70);
+  }
+
+  .numero2{
+    box-shadow: 0px 0px 5px rgb(49, 64, 70);
+  }
+
+  .numero3{
+    box-shadow: 0px 0px 5px rgb(49, 64, 70);
+  }
+
+  .numero4{
+    box-shadow: 0px 0px 5px rgb(49, 64, 70);
+  }
+
+  .numero5{
+    box-shadow: 0px 0px 5px rgb(49, 64, 70);
+  }
+
+  .numero6{
+    box-shadow: 0px 0px 5px rgb(49, 64, 70);
+  }
+
+  .numero7{
+    box-shadow: 0px 0px 5px rgb(49, 64, 70);
+  }
+
+  .numero8{
+    box-shadow: 0px 0px 5px rgb(49, 64, 70);
+  }
+
+  .numero9{
+    box-shadow: 0px 0px 5px rgb(49, 64, 70);
+  }
+
+  .numero0{
+    box-shadow: 0px 0px 5px rgb(49, 64, 70);
   }
